make the html local

--- a/public/balance.html
+++ b/public/balance.html
@@ -22,10 +22,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</span></a>
+          <a class="nav-link" href="./index.html">Home</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/balance.html">Token Balances</a>
+          <a class="nav-link" href="./balance.html">Token Balances</a>
         </li>
       </ul>
     </div>
@@ -65,9 +65,9 @@
   </table>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="/token_abi.js"></script>
+  <script src="./token_abi.js"></script>
   <!-- <script type="text/javascript" src="/gas_bundle.js"></script> -->
-  <script type="text/javascript" src="/balance_bundle.js"></script>
+  <script type="text/javascript" src="./balance_bundle.js"></script>
 </body>
 
 </html>
