--- a/public/balance.html
+++ b/public/balance.html
@@ -14,7 +14,7 @@
 
 <body class="mx-auto mt-5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Dashboard</a>
+    <a class="navbar-brand" href="./index.html">Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,6 +50,7 @@
 
   <h1 id="account" class="mb-3">Account: </h1>
   <h2 id="block">Block: </h2>
+  <h2 id="balance">ETH Balance: </h2>
   <hr>
   <h2 class="mt-5">Balances: </h2>
 
