--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body class="mx-auto mt-5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Dashboard</a>
+    <a class="navbar-brand" href="./index.html">Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
