--- a/public/balance.html
+++ b/public/balance.html
@@ -12,58 +12,64 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="mx-auto mt-5">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<body class="bg-light">
+  <div id="navbar" class="mx-auto">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="./index.html">Dashboard</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Home</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="./balance.html">Token Balances</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">Home</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./balance.html">Token Balances</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div id="content" class="card mx-auto p-5">
+    <form id="form" class="mb-5">
+      <div class="mb-3">
+        <label for="account-input" class="form-label">Enter an account</label>
+        <input class="form-control" id="account-input">
+      </div>
+      <div class="mb-3">
+        <label for="block-input" class="form-label">Enter a block number</label>
+        <input class="form-control" id="block-input">
+      </div>
+      <button id="balance-submit" type="button" class="btn btn-primary">Submit</button>
+    </form>
 
-  <form id="form" class="mt-5 mb-5">
-    <div class="mb-3">
-      <label for="account-input" class="form-label">Enter an account</label>
-      <input class="form-control" id="account-input">
+    <div id="info" class="card bg-light p-4 mb-3">
+      <h3 class="">Block: <span id="block"></span></h3>
+      <hr>
+      <h4>Account: <span id="account" class="text-secondary"></span></h4>
+      <h5>ETH Balance: <span id="balance" class="text-secondary"></span></h5>
     </div>
-    <div class="mb-3">
-      <label for="block-input" class="form-label">Enter a block number</label>
-      <input class="form-control" id="block-input">
+
+    <!-- <hr> -->
+
+    <h2 class="mt-3">Balances: </h2>
+    <div class="card bg-light p-4">
+      <table class="table mx-auto" id="balance-table">
+        <thead>
+          <tr>
+            <th scope="col">Symbol</th>
+            <th scope="col">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="token-list">
+        </tbody>
+      </table>
     </div>
-    <button id="balance-submit" type="button" class="btn btn-primary">Submit</button>
-  </form>
-  <!-- <form>
-    <label for="fname">Enter an account:</label><br>
-    <input type="text" id="fname" name="fname" value="0xFc7A28B3332801a8e5405e65B3Be67c8680742E8"><br>
-    <input type="submit" value="Submit">
-  </form> -->
+  </div>
 
-  <h1 id="account" class="mb-3">Account: </h1>
-  <h2 id="block">Block: </h2>
-  <h2 id="balance">ETH Balance: </h2>
-  <hr>
-  <h2 class="mt-5">Balances: </h2>
-
-  <table class="table mx-auto" id="balance-table">
-    <thead>
-      <tr>
-        <th scope="col">Symbol</th>
-        <th scope="col">Balance</th>
-      </tr>
-    </thead>
-    <tbody id="token-list">
-    </tbody>
-  </table>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="./balance_bundle.js"></script>
