--- a/public/balance.html
+++ b/public/balance.html
@@ -12,9 +12,9 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="bg-light">
+<body class="">
   <div id="navbar" class="mx-auto">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="./index.html">Dashboard</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,22 +46,23 @@
       <button id="balance-submit" type="button" class="btn btn-primary">Submit</button>
     </form>
 
-    <div id="info" class="card bg-light p-4 mb-3">
+    <div id="info" class="card p-4 mb-3 inner-table">
       <h3 class="">Block: <span id="block"></span></h3>
       <hr>
       <h4>Account: <span id="account" class="text-secondary"></span></h4>
-      <h5>ETH Balance: <span id="balance" class="text-secondary"></span></h5>
+      <!-- <h5>ETH Balance: <span id="balance" class="text-secondary"></span></h5> -->
     </div>
 
     <!-- <hr> -->
 
     <h2 class="mt-3">Balances: </h2>
-    <div class="card bg-light p-4">
-      <table class="table mx-auto" id="balance-table">
+    <div class="card p-4 inner-table">
+      <table class="table mx-auto table-hover" id="balance-table">
         <thead>
           <tr>
             <th scope="col">Symbol</th>
             <th scope="col">Balance</th>
+            <th scope="col text-right">Balance in USD</th>
           </tr>
         </thead>
         <tbody id="token-list">
