--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="bg-light">
+<body class="">
   <div id="navbar" class="mx-auto">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="./index.html">Dashboard</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
       <button id="submitButton" type="button" class="btn btn-primary">Submit</button>
     </form>
 
-    <div id="info" class="card bg-light p-4 mb-3">
+    <div id="info" class="card p-4 mb-3 inner-table">
       <h3>Account: <span id="account" class="text-secondary"></span></h3>
       <hr>
       <h4>ETH Balance: <span id="balance" class="text-secondary"></span></h4>
@@ -51,8 +51,8 @@
 
     <h2 class="mt-3">Transactions: </h2>
 
-    <div class="card bg-light p-4">
-      <table class="table mx-auto">
+    <div class="card p-4 inner-table">
+      <table class="table mx-auto table-hover">
         <thead>
           <tr>
             <th scope="col">Block #</th>
