--- a/public/balance.html
+++ b/public/balance.html
@@ -47,7 +47,7 @@
     </form>
 
     <div id="info" class="card p-4 mb-3 inner-table">
-      <h3 class="">Block: <span id="block"></span></h3>
+      <h3 data-toggle="tooltip" title="tooltip" data-placement="top" class="">Block: <span id="block"></span></h3>
       <hr>
       <h4>Account: <span id="account" class="text-secondary"></span></h4>
       <!-- <h5>ETH Balance: <span id="balance" class="text-secondary"></span></h5> -->
@@ -56,22 +56,25 @@
     <!-- <hr> -->
 
     <h2 class="mt-3">Balances: </h2>
-    <div class="card p-4 inner-table">
+    <div>Click on a row to see the token's contract address.</div>
+    <div class="card p-4 my-1 inner-table">
       <table class="table mx-auto table-hover" id="balance-table">
         <thead>
           <tr>
             <th scope="col">Symbol</th>
             <th scope="col">Balance</th>
-            <th scope="col text-right">Balance in USD</th>
+            <th scope="col text-right">Balance in USD*</th>
           </tr>
         </thead>
         <tbody id="token-list">
         </tbody>
       </table>
     </div>
+    <div>*Balance in USD is calculated using <em>current</em> price conversion.</div>
   </div>
 
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="./balance_bundle.js"></script>
 </body>
