--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
         <tbody id="tx-list">
         </tbody>
       </table>
+      <div class="spinner-border mx-auto" role="status" id="spinner"></div>
     </div>
   </div>
 
