--- a/balance.html
+++ b/balance.html
@@ -69,7 +69,7 @@
         <tbody id="token-list">
         </tbody>
       </table>
-      <div class="spinner-border mx-auto" role="status" id="spinner"></div>
+      <div class="spinner-border mx-auto" role="status" id="spinner" style="display: none;"></div>
     </div>
     <div>*Balance in USD is calculated using <em>current</em> price conversion.</div>
   </div>
