--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <tbody id="tx-list">
         </tbody>
       </table>
-      <div class="spinner-border mx-auto" role="status" id="spinner"></div>
+      <div class="spinner-border mx-auto" role="status" id="spinner" style="display: none;"></div>
     </div>
   </div>
 
