--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
 </head>
 
@@ -30,10 +31,18 @@
           </li>
         </ul>
       </div>
+
+      <span class="nav-item">
+        <a class="nav-link" target="_blank" href="https://github.com/yangevelyn/eth_page">Github Repo</a>
+      </span>
     </nav>
   </div>
 
   <div id="content" class="card mx-auto p-5">
+    <div class="ms-auto">
+      <button id="share" class="btn btn-light float-right"><i class="fa fa-share"></i>&nbsp;Share</button>
+    </div>
+
     <form id="form" class="mb-5">
       <div class="mb-3">
         <label for="accountInput" class="form-label">Enter an account</label>
@@ -68,6 +77,7 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="./gas_bundle.js"></script>
 </body>
