--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <h2 class="mt-3">Transactions: </h2>
-
+    <div>Click on a row to see the transaction's hash.</div>
     <div class="card p-4 inner-table">
       <table class="table mx-auto table-hover">
         <thead>
@@ -78,6 +78,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="./gas_bundle.js"></script>
 </body>
