--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     </div>
 
     <h2 class="mt-3">Transactions: </h2>
-    <div>Click on a row to see the transaction's hash.</div>
+    <!-- <div>Click on a row to see more information.</div> -->
     <div class="card p-4 inner-table">
       <table class="table mx-auto table-hover">
         <thead>
           <tr>
             <th scope="col">Block #</th>
             <th scope="col">Timestamp</th>
-            <!-- <th scope="col">Hash</th> -->
             <th scope="col">Gas Fee</th>
+            <th scope="col">Hash</th>
           </tr>
         </thead>
         <tbody id="tx-list">
