--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <th scope="col">Block #</th>
             <th scope="col">Timestamp</th>
             <th scope="col">Gas Fee</th>
-            <th scope="col">Hash</th>
+            <th scope="col">Tx Hash</th>
           </tr>
         </thead>
         <tbody id="tx-list">
