--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./balance.html">Token Balances</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./protocols.html">Protocols</a>
+          </li>
         </ul>
       </div>
 
