--- a/protocols.html
+++ b/protocols.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./balance.html">Token Balances</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./protocols.html">Protocols</a>
+          </li>
         </ul>
       </div>
 
@@ -43,43 +46,35 @@
       <button id="share" class="btn btn-light float-right"><i class="fa fa-share"></i>&nbsp;Share</button>
     </div>
 
-    <form id="form" class="mb-5">
-      <div class="mb-3">
-        <label for="accountInput" class="form-label">Enter an account</label>
-        <input class="form-control" id="accountInput">
-      </div>
-      <button id="submitButton" type="button" class="btn btn-primary">Submit</button>
-    </form>
-
-    <div id="info" class="card p-4 mb-3 inner-table">
-      <h3>Account: <span id="account" class="text-secondary"></span></h3>
-      <hr>
-      <h4>ETH Balance: <span id="balance" class="text-secondary"></span></h4>
-      <h4>Total Gas Spent: <span id="gas" class="text-secondary"></span></h4>
-    </div>
-
-    <h2 class="mt-3">Transactions: </h2>
+    <h2 class="mt-3">Compound: </h2>
     <!-- <div>Click on a row to see more information.</div> -->
     <div class="card p-4 inner-table">
       <table class="table mx-auto table-hover">
         <thead>
           <tr>
-            <th scope="col" id="block-head">
-              Block #&nbsp;
-              <i id="block-sort" class="fa fa-sort-down" style="color: slategrey;"></i>
+            <th scope="col" id="market-head">
+              Market&nbsp;
+              <!-- <i id="market-sort" class="fa fa-sort-down" style="color: slategrey;"></i> -->
             </th>
-            <th scope="col" id="time-head">
-              Timestamp&nbsp;
-              <i id="time-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            <th scope="col" id="supply-head">
+              Supply APY&nbsp;
+              <i id="supply-sort" class="fa fa-sort-down" style="color: slategrey;"></i>
             </th>
-            <th scope="col" id="gas-head">
-              Gas Fee&nbsp;
-              <i id="gas-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            <th scope="col" id="comp-supply-head">
+              COMP Supply APY&nbsp;
+              <i id="comp-supply-sort" class="fa fa-sort" style="color: lightgrey;"></i>
             </th>
-            <th scope="col">Tx Hash</th>
+            <th scope="col" id="borrow-head">
+              Borrow APY&nbsp;
+              <i id="borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            </th>
+            <th scope="col" id="comp-borrow-head">
+              COMP Borrow APY&nbsp;
+              <i id="comp-borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            </th>
           </tr>
         </thead>
-        <tbody id="tx-list">
+        <tbody id="mk-list">
         </tbody>
       </table>
       <div class="spinner-border mx-auto" role="status" id="spinner" style="display: none;"></div>
@@ -89,7 +84,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script type="text/javascript" src="./protocols_functions.js"></script>
+  <script type="text/javascript" src="./protocols_bundle.js"></script>
 </body>
 
 </html>
