--- a/aave.html
+++ b/aave.html
@@ -29,8 +29,12 @@
           <li class="nav-item">
             <a class="nav-link" href="./balance.html">Token Balances</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./protocols.html">Protocols</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Protocols</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="./compound.html">Compound</a>
+              <a class="dropdown-item" href="./aave.html">Aave</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -42,11 +46,11 @@
   </div>
 
   <div id="content" class="card mx-auto p-5">
-    <div class="ms-auto">
+    <!-- <div class="ms-auto">
       <button id="share" class="btn btn-light float-right"><i class="fa fa-share"></i>&nbsp;Share</button>
-    </div>
+    </div> -->
 
-    <h2 class="mt-3">Compound: </h2>
+    <h2 class="mt-3">Aave </h2>
     <!-- <div>Click on a row to see more information.</div> -->
     <div class="card p-4 inner-table">
       <table class="table mx-auto table-hover">
@@ -56,21 +60,17 @@
               Market&nbsp;
               <!-- <i id="market-sort" class="fa fa-sort-down" style="color: slategrey;"></i> -->
             </th>
-            <th scope="col" id="supply-head">
-              Supply APY&nbsp;
-              <i id="supply-sort" class="fa fa-sort-down" style="color: slategrey;"></i>
+            <th scope="col" id="deposit-head">
+              Deposit APY&nbsp;
+              <i id="deposit-sort" class="fa fa-sort-down" style="color: slategrey;"></i>
             </th>
-            <th scope="col" id="comp-supply-head">
-              COMP Supply APY&nbsp;
-              <i id="comp-supply-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            <th scope="col" id="v-borrow-head">
+              Variable Borrow APY&nbsp;
+              <i id="v-borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
             </th>
-            <th scope="col" id="borrow-head">
-              Borrow APY&nbsp;
-              <i id="borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
-            </th>
-            <th scope="col" id="comp-borrow-head">
-              COMP Borrow APY&nbsp;
-              <i id="comp-borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            <th scope="col" id="s-borrow-head">
+              Stable Borrow APY&nbsp;
+              <i id="s-borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
             </th>
           </tr>
         </thead>
@@ -84,7 +84,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script type="text/javascript" src="./protocols_bundle.js"></script>
+  <script type="text/javascript" src="./aave_bundle.js"></script>
 </body>
 
 </html>
