--- a/compound.html
+++ b/compound.html
@@ -34,6 +34,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="./compound.html">Compound</a>
               <a class="dropdown-item" href="./aave.html">Aave</a>
+              <!-- <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a> -->
             </div>
           </li>
         </ul>
@@ -44,56 +46,51 @@
       </span>
     </nav>
   </div>
-  
+
   <div id="content" class="card mx-auto p-5">
-    <div class="ms-auto">
+    <!-- <div class="ms-auto">
       <button id="share" class="btn btn-light float-right"><i class="fa fa-share"></i>&nbsp;Share</button>
-    </div>
+    </div> -->
 
-    <form id="form" class="mb-5">
-      <div class="mb-3">
-        <label for="account-input" class="form-label">Enter an account</label>
-        <input class="form-control" id="account-input">
-      </div>
-      <div class="mb-3">
-        <label for="block-input" class="form-label">Enter a block number</label>
-        <input class="form-control" id="block-input" placeholder="11900892, earliest, latest, etc.">
-      </div>
-      <button id="balance-submit" type="button" class="btn btn-primary">Submit</button>
-    </form>
-
-    <div id="info" class="card p-4 mb-3 inner-table">
-      <h3 data-toggle="tooltip" title="tooltip" data-placement="top" class="">Block: <span id="block"></span></h3>
-      <hr>
-      <h4>Account: <span id="account" class="text-secondary"></span></h4>
-      <!-- <h5>ETH Balance: <span id="balance" class="text-secondary"></span></h5> -->
-    </div>
-
-    <!-- <hr> -->
-
-    <h2 class="mt-3">Balances: </h2>
-    <div>Click on a row to see the token's contract address.</div>
-    <div class="card p-4 my-1 inner-table">
-      <table class="table mx-auto table-hover" id="balance-table">
+    <h2 class="mt-3">Compound </h2>
+    <!-- <div>Click on a row to see more information.</div> -->
+    <div class="card p-4 inner-table">
+      <table class="table mx-auto table-hover">
         <thead>
           <tr>
-            <th scope="col">Symbol</th>
-            <th scope="col">Balance</th>
-            <th scope="col text-right">Balance in USD*</th>
+            <th scope="col" id="market-head">
+              Market&nbsp;
+              <!-- <i id="market-sort" class="fa fa-sort-down" style="color: slategrey;"></i> -->
+            </th>
+            <th scope="col" id="supply-head">
+              Supply APY&nbsp;
+              <i id="supply-sort" class="fa fa-sort-down" style="color: slategrey;"></i>
+            </th>
+            <th scope="col" id="comp-supply-head">
+              COMP Supply APY&nbsp;
+              <i id="comp-supply-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            </th>
+            <th scope="col" id="borrow-head">
+              Borrow APY&nbsp;
+              <i id="borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            </th>
+            <th scope="col" id="comp-borrow-head">
+              COMP Borrow APY&nbsp;
+              <i id="comp-borrow-sort" class="fa fa-sort" style="color: lightgrey;"></i>
+            </th>
           </tr>
         </thead>
-        <tbody id="token-list">
+        <tbody id="mk-list">
         </tbody>
       </table>
       <div class="spinner-border mx-auto" role="status" id="spinner" style="display: none;"></div>
     </div>
-    <div>*Balance in USD is calculated using <em>current</em> price conversion.</div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script type="text/javascript" src="./balance_bundle.js"></script>
+  <script type="text/javascript" src="./compound_bundle.js"></script>
 </body>
 
 </html>
